--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "description": "",
   "dependencies": {
     "cli-table3": "^0.6.5",
+    "install": "^0.13.0",
+    "npm": "^10.8.3",
     "prompt-sync": "^4.2.0"
   }
 }
